--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
 	, 	"amqp" : ">=0" 
+	, "hiredis" : ">=0"
+	, "redis" : ">=0"
+	, "request" : ">=0"
   }
 }
